--- a/src/app/views/recordable-subjects/parties/party-editor.component.html
+++ b/src/app/views/recordable-subjects/parties/party-editor.component.html
@@ -8,24 +8,22 @@
     <div fxLayout="row" fxLayout.lt-md="column">
       <div fxFlex="100">
         <label>{{ isPerson ? 'Nombre Completo:' : 'Nombre o razón social' }}</label>
-        <input formControlName='name'
+        <input formControlName='fullName'
           type="text"
           class="text-box uppercase"
-          [class.invalid-control]="name.touched && name.errors">
+          [class.invalid-control]="fullName.touched && fullName.errors">
       </div>
     </div>
 
     <div fxLayout="row" fxLayout.lt-md="column">
-      <div *ngIf="isPerson" fxFlex="100">
+      <div *ngIf="isPerson" fxFlex="50">
         <label>CURP:</label>
         <input formControlName='curp'
           type="text"
           class="text-box uppercase">
       </div>
-    </div>
 
-    <div fxLayout="row" fxLayout.lt-md="column">
-      <div fxFlex="100">
+      <div fxFlex="50">
         <label>RFC:</label>
         <input formControlName='rfc'
           type="text"
@@ -36,9 +34,9 @@
     <div fxLayout="row" fxLayout.lt-md="column">
       <div fxFlex="100">
         <label>Otra información:</label>
-        <textarea formControlName="notes"
-          class="text-area uppercase"
-          rows="3">
+        <textarea formControlName="partyNotes"
+          class="text-area uppercase" empNgTextareaAutoresize rows="1">
+
         </textarea>
       </div>
     </div>
@@ -46,12 +44,13 @@
     <div fxLayout="row" fxLayout.lt-md="column">
       <div fxFlex="40">
         <label>Participa como:</label>
-        <emp-ng-select #selectRoles
-          [config]="{groupBy: 'items'}"
+        <emp-ng-select
+          [config]="{groupBy: 'items', clearable: false}"
           [placeholder]="'( Seleccionar rol )'"
           [items]="rolesList"
-          [showError]="role.touched && role.errors"
-          formControlName="role">
+          [showError]="roleUID.touched && roleUID.errors"
+          formControlName="roleUID"
+          (changes)="onRoleChanges($event)">
         </emp-ng-select>
       </div>
 
@@ -59,26 +58,27 @@
         <ng-container *ngSwitchCase="'Primary'">
           <div fxFlex="40">
             <label>Sobre:</label>
-            <emp-ng-select #selectParticipationTypes
-              [items]="participationTypesList"
+            <emp-ng-select
+              [items]="partUnits"
               [placeholder]="'( U de M )'"
-              [showError]="participationType.touched && participationType.errors"
-              formControlName="participationType">
+              [showError]="partUnitUID.touched && partUnitUID.errors"
+              formControlName="partUnitUID"
+              (changes)="onPartUnitChanges($event)">
             </emp-ng-select>
           </div>
 
-          <div fxFlex="20" *ngIf="validateParticipationTypeWithAmount(participationType.value)">
+          <div fxFlex="20" *ngIf="validatePartUnitUIDWithAmount(partUnitUID.value)">
             <label>Cantidad:</label>
-            <input formControlName="participationAmount"
+            <input formControlName="partAmount"
               type="number"
               class="text-box"
-              [class.invalid-control]="participationAmount.touched && participationAmount.errors">
+              [class.invalid-control]="partAmount.touched && partAmount.errors">
           </div>
         </ng-container>
         <ng-container *ngSwitchCase="'Secondary'">
           <div fxFlex="60">
             <label>Sobre:</label>
-            <emp-ng-select #selectPartiesInRecordingAct
+            <emp-ng-select
               [config]="{closeOnSelect: false,
                           multiple: true,
                           searchable: false,
@@ -86,8 +86,8 @@
               [placeholder]="'Seleccionar una persona u organización'"
               [items]="partiesInRecordingActList"
 
-              [showError]="of.touched && of.errors"
-              formControlName="of">
+              [showError]="associatedWithUID.touched && associatedWithUID.errors"
+              formControlName="associatedWithUID">
             </emp-ng-select>
           </div>
         </ng-container>
@@ -102,9 +102,9 @@
     <div fxLayout="row" fxLayout.lt-md="column">
       <div fxFlex="100">
         <label>Observaciones:</label>
-        <textarea formControlName="observations"
-          class="text-area uppercase"
-          rows="3">
+        <textarea formControlName="notes"
+          class="text-area uppercase" empNgTextareaAutoresize rows="1">
+
         </textarea>
       </div>
     </div>
