--- a/src/app/views/recordable-subjects/parties/party-list.component.html
+++ b/src/app/views/recordable-subjects/parties/party-list.component.html
@@ -1,24 +1,30 @@
 <div class="section-title"> Personas registradas </div>
 
-<div class="tab-container scrollable-container mat-elevation-z1">
+<div class="tab-container scrollable-container mat-elevation-z1" style="max-height: 35%;">
 
   <table mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Nombre </th>
       <td mat-cell *matCellDef="let row">
-        <strong>{{row.party.name}}</strong>
-        <div class="grid-text-item" fxLayout="row" *ngFor="let item of partiesList" style="font-size: 8pt;">
-          <div *ngIf="item.uid === row.party.uid">
-            <div class="pr-1 label">{{item.role.name}}: </div>
-            <strong>{{item.party}}</strong>
+        <strong>{{row.party.fullName}}</strong>
+        <div class="grid-text-item" fxLayout="row" *ngFor="let group of secondaryPartiesGroupedByRoleList">
+          <div *ngIf="showRoleGroupByParty(group, row)">
+            <div class="label pr-1">{{group.name}}: </div>
+            <ng-container *ngFor="let party of group.parties">
+              <ng-container *ngIf="row.party.uid === party.associatedWith.uid">
+                <strong>{{party.party.fullName}}</strong>
+                <a class="link pl-1" (click)="removeParty(party)">Remover</a>
+                <br>
+              </ng-container>
+            </ng-container>
           </div>
         </div>
       </td>
     </ng-container>
-    <ng-container matColumnDef="typeIdentification">
+    <ng-container matColumnDef="identification">
       <th mat-header-cell *matHeaderCellDef> Identificación </th>
-      <td mat-cell *matCellDef="let row">
+      <td mat-cell *matCellDef="let row" class="nowrap">
         <div *ngIf="row.party.curp !== ''">
           CURP: {{row.party.curp}}
         </div>
@@ -28,21 +34,21 @@
     </td>
     </ng-container>
     <ng-container matColumnDef="role">
-      <th mat-header-cell *matHeaderCellDef> Participa como </th>
+      <th mat-header-cell *matHeaderCellDef class="nowrap"> Participa como </th>
       <td mat-cell *matCellDef="let row"> {{row.role?.name}} </td>
     </ng-container>
-    <ng-container matColumnDef="participationAmount">
+    <ng-container matColumnDef="partAmount">
       <th mat-header-cell *matHeaderCellDef> Titularidad </th>
-      <td mat-cell *matCellDef="let row"> {{row.type}} </td>
+      <td mat-cell *matCellDef="let row" class="nowrap"> {{ getPartAmountText(row) }} </td>
     </ng-container>
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
-      <td mat-cell *matCellDef="let row" class="text-align-center">
-        <mat-icon (click)="removeParty(row)">delete</mat-icon>
+      <td mat-cell *matCellDef="let row" class="column-action">
+        <mat-icon (click)="removeParty(row)" title="Remover Persona">delete</mat-icon>
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true;"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
   </table>
