--- a/src/app/views/registration/recording-acts/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts/recording-acts-list.component.html
@@ -1,4 +1,4 @@
-<div class="section-title" *ngIf="title"> {{ title }} </div>
+<div class="section-title" *ngIf="title" [innerHTML]="title"></div>
 
 <div class="tab-container scrollable-container mat-elevation-z1">
 
@@ -11,10 +11,9 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Acto jurídico </th>
       <td mat-cell *matCellDef="let row">
-        <a class="link" (click)="onOpenRecordingActEditor(row)" *ngIf="showRecordingActLink">
+        <a class="link" (click)="onOpenRecordingActEditor(row)">
           {{ row.name }}
         </a>
-        <span *ngIf="!showRecordingActLink">{{ row.name }}</span>
       </td>
     </ng-container>
     <ng-container matColumnDef="electronicID">
@@ -46,7 +45,9 @@
     </ng-container>
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef> Estado </th>
-      <td mat-cell *matCellDef="let row"> {{ row.recordableSubject.status }} </td>
+      <td mat-cell *matCellDef="let row">
+        {{ getRecordableObjectStatusName(row.recordableSubject.status) }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="actionDelete">
