Add book-entry info to recording-act-list title

--- a/src/app/views/registration/recording-book/book-entry-edition.component.html
+++ b/src/app/views/registration/recording-book/book-entry-edition.component.html
@@ -20,7 +20,7 @@
     <emp-land-recording-acts-list
       [instrumentRecording]="instrumentRecording"
       [recordingActs]="recordingActs"
-      title="Predios y actos jurídicos registrados en esta inscripción"
+      [title]="recordingActListTitle"
       (recordingActsListEvent)="onRecordingActsListEvent($event)">
 
     </emp-land-recording-acts-list>
