--- a/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
+++ b/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
@@ -58,6 +58,19 @@
 
   </div>
 
+
+  <div *ngIf="displayRecordingActEditor"
+    class="secondary">
+
+    <emp-land-recording-act-edition
+      [instrumentRecordingUID]="selectedRecordingAct.instrumentRecording.uid"
+      [recordingActUID]="selectedRecordingAct.recordingAct.uid"
+      (closeEvent)="unselectCurrentRecordingAct()">
+
+    </emp-land-recording-act-edition>
+
+  </div>
+
 </div>
 
 
