Emit when recording-act is updated and refresh data

--- a/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
+++ b/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
@@ -60,7 +60,8 @@
     <emp-land-recording-act-edition
       [instrumentRecordingUID]="selectedRecordingAct.instrumentRecording.uid"
       [recordingActUID]="selectedRecordingAct.recordingAct.uid"
-      (closeEvent)="unselectCurrentRecordingAct()">
+      (closeEvent)="unselectCurrentRecordingAct()"
+      (recordingActUpdated)="onRecordingActUpdated()">
 
     </emp-land-recording-act-edition>
 
