--- a/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
+++ b/src/app/workspaces/land-transactions/land-transactions-workspace.component.html
@@ -65,7 +65,8 @@
     <emp-land-recording-act-edition
       [instrumentRecordingUID]="selectedRecordingAct.instrumentRecording.uid"
       [recordingActUID]="selectedRecordingAct.recordingAct.uid"
-      (closeEvent)="unselectCurrentRecordingAct()">
+      (closeEvent)="unselectCurrentRecordingAct()"
+      (recordingActUpdated)="onRecordingActUpdated()">
 
     </emp-land-recording-act-edition>
 
