Add some edition/readonly conditions

--- a/src/app/views/registration/recording-acts/recording-act-edition.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-edition.component.html
@@ -19,12 +19,13 @@
       <br>
 
       <emp-land-party-list
+        [readonly]="!recordingAct.actions.isEditable"
         [partiesList]="recordingAct.parties"
         (partyListEvent)="onPartyListEvent($event)">
 
       </emp-land-party-list>
 
-      <emp-ng-expansion-button [panelState]="panelAddState" (panelStateChange)="onPanelEstateChange($event)"
+      <emp-ng-expansion-button *ngIf="recordingAct.actions.isEditable" [panelState]="panelAddState" (panelStateChange)="onPanelEstateChange($event)"
         [config]="{ textButtonOpen: 'Agregar una nueva persona u organización a este acto jurídico',
                     textButtonClose: 'Cancelar registro'}">
 
