--- a/src/app/views/registration/recordable-subject-tabbed-view/recordable-subject-tabbed-view.component.html
+++ b/src/app/views/registration/recordable-subject-tabbed-view/recordable-subject-tabbed-view.component.html
@@ -12,7 +12,7 @@
         [instrumentRecording]="instrumentRecording"
         [recordingAct]="recordingAct"
         [realEstate]="realEstate"
-        [readonly]="false"
+        [readonly]="instrumentRecording.actions.can.openInstrument"
         (realEstateEditorEvent)="onRealEstateEditorEvent($event)">
       </emp-land-real-estate-editor>
 
@@ -21,7 +21,7 @@
         [recordingAct]="recordingAct"
         [recordableSubject]="recordingAct.recordableSubject"
         [isAssociation]="isAssociation"
-        [readonly]="false"
+        [readonly]="instrumentRecording.actions.can.openInstrument"
         (noPropertyEditorEvent)="onNoPropertyEditorEvent($event)">
 
       </emp-land-no-property-editor>
