Set Length validators for curp and rfc fields

--- a/src/app/views/recordable-subjects/parties/party-editor.component.html
+++ b/src/app/views/recordable-subjects/parties/party-editor.component.html
@@ -20,14 +20,16 @@
         <label>CURP:</label>
         <input formControlName='curp'
           type="text"
-          class="text-box uppercase">
+          class="text-box uppercase"
+          [class.invalid-control]="curp.touched && curp.errors">
       </div>
 
       <div fxFlex="50">
         <label>RFC:</label>
         <input formControlName='rfc'
           type="text"
-          class="text-box uppercase">
+          class="text-box uppercase"
+          [class.invalid-control]="rfc.touched && rfc.errors">
       </div>
     </div>
 
