Use 'submitted' flag in login and display spinner

--- a/src/app/views/security/user-login/user-login.component.html
+++ b/src/app/views/security/user-login/user-login.component.html
@@ -20,7 +20,11 @@
 
       <br>
 
-      <form autocomplete="off" [formGroup]="form">
+      <form autocomplete="off" [formGroup]="form" [empNgSpinnerHost]="spinner">
+
+        <emp-ng-spinner #spinner [visible]="submitted">
+
+        </emp-ng-spinner>
 
         <div class="authentication-section-form">
 
