--- a/src/app/workspaces/main-layout/main-layout.component.scss
+++ b/src/app/workspaces/main-layout/main-layout.component.scss
@@ -62,8 +62,28 @@
     margin-left: 8px;
   }
 
+  .header-container {
+    margin-left: 8px;
+    margin-top: -6px;
+  }
+
+  .header {
+    text-transform: uppercase;
+  }
+
+  .subheader {
+    font-size: 8pt;
+    margin-top: 4px;
+  }
+
   .main-menu {
     margin-left: 16px;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .main-menu {
+      margin-left: 0;
+    }
   }
 }
 
