--- a/src/app/workspaces/main-layout/user-session/user-session.component.html
+++ b/src/app/workspaces/main-layout/user-session/user-session.component.html
@@ -1,7 +1,9 @@
 
 <div class="container">
 
-  <div class="user-name"> {{principal.identity.name}} </div>
+  <div class="user-name"> {{principal.identity ? principal.identity.name : ''}}
+
+  </div>
 
   <a class="logout" [routerLink]="['/security/login']">Cerrar sesión</a>
 
