--- a/src/styles/angular-material-theme.scss
+++ b/src/styles/angular-material-theme.scss
@@ -4,6 +4,7 @@
  *
  * See LICENSE.txt in the project root for complete license information.
  */
+@use '~@angular/material' as mat;
 
 @import '~@angular/material/theming';
 
@@ -11,39 +12,39 @@
 
 $primary-font-family: "'Work Sans', sans-serif" !default;
 
-$empiria-land-app-typography: mat-typography-config(
+$empiria-land-app-typography: mat.define-typography-config(
   $font-family: $primary-font-family,
-  $headline: mat-typography-level(24pt, 34pt, 400),
-  $title: mat-typography-level(14pt, 20pt, 500),
-  $body-1: mat-typography-level(9.5pt, 16pt, 400),
-  $body-2: mat-typography-level(10pt, 14pt, 500),
-  $caption: mat-typography-level(9pt, 12pt, 400),
-  $button: mat-typography-level(10pt, 14pt, 400),
-  $input: mat-typography-level(10.5pt, 1.25, 400)
+  $headline: mat.define-typography-level(24pt, 34pt, 400),
+  $title: mat.define-typography-level(14pt, 20pt, 500),
+  $body-1: mat.define-typography-level(9.5pt, 16pt, 400),
+  $body-2: mat.define-typography-level(10pt, 14pt, 500),
+  $caption: mat.define-typography-level(9pt, 12pt, 400),
+  $button: mat.define-typography-level(10pt, 14pt, 400),
+  $input: mat.define-typography-level(10.5pt, 1.25, 400)
 );
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 // Also applies custom typography that allow use of angular material style classes in html items.
-@include mat-core($empiria-land-app-typography);
+@include mat.core($empiria-land-app-typography);
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$empiria-land-app-primary: mat-palette($mat-gray, 500);
-$empiria-land-app-accent: mat-palette($mat-teal, 300, 200, 500);
+$empiria-land-app-primary: mat.define-palette(mat.$gray-palette, 500);
+$empiria-land-app-accent: mat.define-palette(mat.$teal-palette, 300, 200, 500);
 
 // The warn palette is optional (defaults to red).
-$empiria-land-app-warn: mat-palette($mat-red, 500);
+$empiria-land-app-warn: mat.define-palette(mat.$red-palette, 500);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$empiria-land-app-theme: mat-light-theme($empiria-land-app-primary, $empiria-land-app-accent, $empiria-land-app-warn);
+$empiria-land-app-theme: mat.define-light-theme($empiria-land-app-primary, $empiria-land-app-accent, $empiria-land-app-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($empiria-land-app-theme);
+@include mat.all-component-themes($empiria-land-app-theme);
 
 // Apply custom typography to all angular material components.
-@include angular-material-typography($empiria-land-app-typography);
+@include mat.all-component-typographies($empiria-land-app-typography);
