--- a/src/styles/angular-material-theme.scss
+++ b/src/styles/angular-material-theme.scss
@@ -4,9 +4,9 @@
  *
  * See LICENSE.txt in the project root for complete license information.
  */
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
-@import '~@angular/material/theming';
+@import '@angular/material/theming';
 
 // variables
 
