Install eslint (tslint was deprecated) + Lint code

--- a/src/app/shared/form-controls/file-control/file-control.component.html
+++ b/src/app/shared/form-controls/file-control/file-control.component.html
@@ -44,7 +44,7 @@
 
           <div class="file-download-progress">
             <mat-progress-bar
-              [mode]="download.state == 'PENDING' ? 'buffer' : 'determinate'"
+              [mode]="download.state === 'PENDING' ? 'buffer' : 'determinate'"
               [value]="download.progress">
             </mat-progress-bar>
           </div>
