--- a/src/app/views/recordable-subjects/parties/party-list.component.html
+++ b/src/app/views/recordable-subjects/parties/party-list.component.html
@@ -53,7 +53,7 @@
 
   </table>
 
-  <div *ngIf="dataSource.data.length == 0" class="text-not-found">
+  <div *ngIf="dataSource.data.length === 0" class="text-not-found">
     <p>No se han agregado personas u organizaciones.</p>
   </div>
 
