--- a/src/app/views/transactions/transaction-list/transaction-list-editor.component.html
+++ b/src/app/views/transactions/transaction-list/transaction-list-editor.component.html
@@ -37,7 +37,7 @@
 
   </div>
 
-  <div *ngIf="transactionList.length == 0" class="text-not-found">
+  <div *ngIf="transactionList.length === 0" class="text-not-found">
     <p>La lista de trámites está vacía.</p>
   </div>
 
