--- a/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
+++ b/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
@@ -49,10 +49,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <div *ngIf="dataSource.data.length == 0" class="text-not-found">
+  <div *ngIf="dataSource.data.length === 0" class="text-not-found">
     <p>No se han agregado conceptos.</p>
   </div>
 
 </div>
-
-
