--- a/src/app/views/transactions/workflow-history/workflow-history.component.html
+++ b/src/app/views/transactions/workflow-history/workflow-history.component.html
@@ -20,7 +20,7 @@
     <ng-container matColumnDef="checkOutTime">
       <th mat-header-cell *matHeaderCellDef> Terminado </th>
       <td mat-cell *matCellDef="let row" class="nowrap">
-        {{ row.checkInTime == row.endProcessTime ? '' : row.endProcessTime | dateTimeFormat: 'DM HH:mm' }}
+        {{ row.checkInTime === row.endProcessTime ? '' : row.endProcessTime | dateTimeFormat: 'DM HH:mm' }}
       </td>
     </ng-container>
     <ng-container matColumnDef="endProcessTime">
@@ -32,7 +32,7 @@
     <ng-container matColumnDef="elapsedTime">
       <th mat-header-cell *matHeaderCellDef class="text-align-right"> Trabajo </th>
       <td mat-cell *matCellDef="let row" class="text-align-right nowrap">
-        {{ row.checkInTime == row.endProcessTime ? '' : row.elapsedTime | timeFormat }}
+        {{ row.checkInTime === row.endProcessTime ? '' : row.elapsedTime | timeFormat }}
       </td>
     </ng-container>
     <ng-container matColumnDef="statusName">
@@ -57,10 +57,10 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    <tr mat-footer-row *matFooterRowDef="displayedFooterColumns" [hidden]="dataSource.data.length == 0"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedFooterColumns" [hidden]="dataSource.data.length === 0"></tr>
   </table>
 
-  <div *ngIf="dataSource.data.length == 0" class="text-not-found">
+  <div *ngIf="dataSource.data.length === 0" class="text-not-found">
     <p>No se han encontrado registros.</p>
   </div>
 
